Scrollbar no longer shifts content

--- a/src/modules/Interface/Main/Content/Content.css
+++ b/src/modules/Interface/Main/Content/Content.css
@@ -6,7 +6,8 @@
   /* grid-template-columns: 350px auto; */
   max-height: 100%;
   /* width: 100%; */
-  overflow: auto;
+  /* overflow: auto; */
+  overflow: overlay;
 }
 
 /* UTILITY */
